--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "cspell": "cspell **/*.{ts,tsx,js,jsx,md}",
-    "postpush": "standard-version --release-as patch"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -38,8 +38,7 @@
     "cspell": "^9.0.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "husky": "^8.0.0",
-    "standard-version": "^9.5.0",
+    "husky": "^8.0.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
