Added Jest configuration and initial Message component tests

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-agent",
-  "version": "0.16.0",
+  "version": "0.17.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,7 +10,10 @@
     "lint": "next lint",
     "cspell": "cspell **/*.{ts,tsx,js,jsx,md}",
     "prepare": "husky install",
-    "store": "tsx src/scripts/storeDocuments.ts"
+    "store": "tsx src/scripts/storeDocuments.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@langchain/community": "^0.3.45",
@@ -38,6 +41,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -45,8 +51,11 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "husky": "^8.0.3",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.0",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
